Fixed scrollbar bg color for dark theme

--- a/src/sass/color-schemes/_light.scss
+++ b/src/sass/color-schemes/_light.scss
@@ -15,6 +15,7 @@ body {
   /* Categories  list */
   --category-color: rgba(17, 17, 17, 0.6);
   --active-category-color: var(--accent-primary);
+  --scrollbar-bg-color: #e0e0e0;
 
   /* Form */
   --form-field-bg-color: #{$milky};
