--- a/src/sass/layout/_common.scss
+++ b/src/sass/layout/_common.scss
@@ -14,7 +14,7 @@ body {
 }
 
 .container {
-  outline: 2px solid maroon;
+  // outline: 2px solid maroon;
 
   overflow: hidden;
 
